<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />

    </group>

    <item android:title="Danh Mục Sản Phẩm">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_men"
                    android:icon="@drawable/baseline_product_vest_24"
                    android:title="@string/men" />
                <item
                    android:id="@+id/nav_women"
                    android:icon="@drawable/baseline_dress_24"
                    android:title="@string/women" />
                <item
                    android:id="@+id/nav_Aothun"
                    android:icon="@drawable/baseline_product_aothun_24"
                    android:title="Áo Thun" />
                <item
                    android:id="@+id/nav_Aokhoac"
                    android:icon="@drawable/baseline_product_jeans_24"
                    android:title="Áo Khoác" />
                <item
                    android:id="@+id/nav_Aosomi"
                    android:icon="@drawable/baseline_shirt_24"
                    android:title="Sơ Mi" />

            </group>
        </menu>
    </item>

    <item android:title="@string/user">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/baseline_profile_24"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/nav_mycart"
                    android:icon="@drawable/baseline_shopping_cart_24"
                    android:title="@string/my_cart" />

                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/baseline_settings_24"
                    android:title="@string/setting" />
                <item
                    android:id="@+id/nav_logging"
                    android:icon="@drawable/baseline_login_24"
                    android:title="@string/DangNhap" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/baseline_login_24"
                    android:title="Đăng Xuất" />
            </group>
        </menu>
    </item>
</menu>